Bug 103689 - Calc don't refresh when a cell value has changed, depending of the ranges including the modified cell.
Summary: Calc don't refresh when a cell value has changed, depending of the ranges inc...
Status: CLOSED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Eike Rathke (retired, only occasionally showing up)
URL:
Whiteboard: target:5.3.0 target:5.2.4
Keywords:
Depends on:
Blocks:
 
Reported: 2016-11-03 21:45 UTC by Andras
Modified: 2021-07-02 10:02 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
In the test the MAX function is not working properly (9.29 KB, application/vnd.oasis.opendocument.spreadsheet)
2016-11-03 21:48 UTC, Andras
Details
New sample test (9.49 KB, application/vnd.oasis.opendocument.spreadsheet)
2016-11-04 00:10 UTC, m_a_riosv
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Andras 2016-11-03 21:45:33 UTC
Description:
The MAX function over worksheets e.g. MAX(w1.A6:w6.A6)don't working properly
in the case as follows:
1. There are more worksheets and,
2. On the last (or one of them is MAX(w1.A6:w6.A6) and
3. the first worksheet will be moved and
4. after restored to the original place --->
the MAX function not detect the change of the A6 cells on the worksheets

Steps to Reproduce:
in the case as follows:
1. There are more worksheets and,
2. On the last (or one of them is MAX(w1.A6:w6.A6) and
3. the first worksheet will be moved and
4. after restored to the original place --->
the MAX function not detect the change of the A6 cells on the worksheets

Actual Results:  
The MAX function value not changed

Expected Results:
If we write a higher value in the cell, the MAX need to change the result.


Reproducible: Always

User Profile Reset: No

Additional Info:
I can send a clear sample for test.


User-Agent: Mozilla/5.0 (Windows NT 6.1; rv:49.0) Gecko/20100101 Firefox/49.0
Comment 1 Andras 2016-11-03 21:48:02 UTC
Created attachment 128474 [details]
In the test the MAX function is not working properly
Comment 2 m_a_riosv 2016-11-04 00:10:42 UTC
Created attachment 128480 [details]
New sample test

Reproducible
Version: 5.2.3.2 (x64)
Build ID: c019706a50de7fcb07d0d528b09b46a887562beb
CPU Threads: 4; OS Version: Windows 6.19; UI Render: default; 
Locale: es-ES (es_ES); Calc: group

But the issue is with all functions, with any function on SUM:E3, changing the value on SUM:B3, formula on SUM:E3 it's not updated with Autocalculate or F9, needs a hard recalc to update.

But if the end of the function's range it's not SUM:B3 it updates.

On the new sample file, changing SUM:B3 only updates one of the formulas.
Comment 3 Andras 2016-11-04 00:27:37 UTC
In the sample I have sent the MIN function is working properly.
Comment 4 Eike Rathke (retired, only occasionally showing up) 2016-11-09 13:14:14 UTC
The failure is independent of moving sheets around and independent of which functions are used, the problem is a reference listening to the same identical 3D range spanning several sheets. The first listener receives update notifications from all sheets, subsequent listeners only from the first sheet of the range.
Comment 5 Commit Notification 2016-11-09 14:20:03 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=129eddc18b4f2cb1320b60bf68de537cf86b60f2

Resolves: tdf#103689 do not slice 3D area broadcasters into separate sheets

It will be available in 5.3.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Eike Rathke (retired, only occasionally showing up) 2016-11-09 14:37:58 UTC
Pending review https://gerrit.libreoffice.org/30720 for 5-2
Comment 7 Commit Notification 2016-11-11 15:32:51 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "libreoffice-5-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=5ea35685395e2dfede904fcf5fffbcdcecd30723&h=libreoffice-5-2

Resolves: tdf#103689 do not slice 3D area broadcasters into separate sheets

It will be available in 5.2.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 tomber 2021-07-02 07:35:54 UTC Comment hidden (spam)