Resolves: tdf#103689 do not slice 3D area broadcasters into separate sheets

Change-Id: Ie167e5e5e953c3e8064b8e128d52f6aa6740575b
(cherry picked from commit 129eddc18b4f2cb1320b60bf68de537cf86b60f2)
Reviewed-on: https://gerrit.libreoffice.org/30720
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>